# trading-calculator

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  SessionManager.cpp  SessionManager.h  Trade.cpp  Trade.h  TradeCalculator.cpp  TradeCalculator.h  Utils.cpp  Utils.h  config.json  main.cpp
Analytics/: EquityStats.cpp  EquityStats.h
Backtest/: Backtester.cpp  Backtester.h  BatchBacktester.cpp  BatchBacktester.h  EquityCurveGenerator.cpp  EquityCurveGenerator.h
Journal/: TradeJournal.cpp  TradeJournal.h
Risk/: RiskCurveGenerator.cpp  RiskCurveGenerator.h  RiskProfile.cpp  RiskProfile.h
UI/: ConsoleUI.cpp  ConsoleUI.h  Menu.cpp  Menu.h
Utils/: InputHandler.cpp  InputHandler.h  InputHandler.tpp
Workflow/: EquityCurveRenderer.cpp  EquityCurveRenderer.h  MainMenu.cpp  MainMenu.h  NewTradeWorkflow.cpp  NewTradeWorkflow.h  SettingsHandler.cpp  SettingsHandler.h  SimulationHandler.cpp  SimulationHandler.h  StatsHandler.cpp  StatsHandler.h  TradeConfigurator.cpp  TradeConfigurator.h  TradeDisplay.cpp  TradeDisplay.h  ViewSavedTrades.cpp  ViewSavedTrades.h
config/: batch_config.json
docs/: Architecture.md  BatchBacktesting.md
tests/: test_batch_backtester.cpp
